# qr-core

./: .gitignore  Dockerfile  appspec.yml  docker-compose.yml  docker-entrypoint.sh  pyproject.toml
.github/scripts/: build.sh
.github/workflows/: deploy.yml
poetry_scripts/: django.py
requirements/: base.txt
src/aicore/settings/: __init__.py
src/aicore/settings/configs/: databases.py  general_settings.py  installed_apps.py  languages.py  middlewares.py  templates.py
src/src/: settings.py
src/src/settings/: __init__.py
src/src/settings/configs/: general_settings.py
